--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <link rel="stylesheet" href="normalize.css">
     <meta charset="UTF-8">
     <meta name="Tours-tech-valley">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
