--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -124,9 +124,9 @@
     <footer>
         <ul class="contact2">
             <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseau" src="Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="Images reseaux sociaux/Twitter.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Facebook.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Instagram.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Twitter.png"></a>
             <li>Contact</li>
         </ul>
     </footer>
