Barre de nav desktop modif des li pour menu burger

--- a/nav.html
+++ b/nav.html
@@ -13,11 +13,13 @@
         
         <img class="headerbackground" src="https://via.placeholder.com/480x80" alt="backgroundarticle">
         <nav class="navbar">
-            <a href="#accueil">ACCUEIL</a>
-            <a href="#econum">ECOSYSTEME DU NUMERIQUE</a>
-            <a href="#dynaeco">DYNAMISME ECONOMIQUE</a>
-            <a href="#qualvie">QUALITE DE VIE</a>
-            <a href="#contact">CONTACT</a>
+            <ul class="ulnavbar">
+                <li><a href="#accueil">ACCUEIL</a></li>
+                <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
+                <li><a href="#qualvie">QUALITE DE VIE</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
         </nav>
     </header>
 </body>
