--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
     <meta charset="UTF-8">
     <meta name="Tours-tech-valley">
@@ -22,30 +23,39 @@
             </ul>
         </nav>
     </header>
-            <section class="category" ><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
-            <div class="superposition">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus est inventore obcaecati, eligendi earum magni suscipit numquam nobis! Doloribus explicabo accusantium saepe est cupiditate ipsum eius expedita nobis necessitatibus praesentium?</p>
-            </div>
-            </section>
+        <section class="category" ><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
+            </br>
+            </br>
+            </br>
+            <h2>Le numérique</h2>
+            </br>
+            </br>
+            </br>
+        </section>
         <section class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
-            <div class="superposition">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, repellendus nostrum commodi maxime tempora libero quibusdam reprehenderit velit, odit magnam, iusto sunt veniam. Dicta corporis quasi, aspernatur dolores consequuntur enim.</p>
-                </div>
-            </section>
-        <section class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">
-            <div class="superposition">    
-                <h2>Lorem</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe maiores sint quas quis doloribus aperiam tempora ab perspiciatis architecto sed mollitia earum accusamus numquam, animi asperiores, vitae optio soluta. Dolore!</p>
-            </div>
+            </br>
+            </br>
+            </br>
+            <h2>L'Economie</h2>
+            </br>
+            </br>
+            </br>
+        </section>
+        <section class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">    
+            </br>
+            </br>
+            </br>
+            <h2>La Vie a Tours</h2>
+            </br>
+            </br>
+            </br>
         </section>
     <footer>
-        <ul class="contact2">
+        <ul class="contact">
             <li>Contact Us</li>
-                <a href="https://www.votre_url.com" ><img class="reseau" src="images/Images reseaux sociaux/Facebook.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseau" src="images/Images reseaux sociaux/Instagram.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseau" src="images/Images reseaux sociaux/Twitter.png"></a>
+                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Facebook.png"></a>
+                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Instagram.png"></a>
+                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Twitter.png"></a>
             <li>Contact</li>
         </ul>
     </footer>
