--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -123,14 +123,13 @@
         </div>
     </section>
     <footer>
-        <ul class="contact2">
-            <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Twitter.png"></a>
-            <li>Contact</li>
-        </ul>
-    </footer>
-</body>
-
+            <ul class="contact">
+                <li>Contact Us</li>
+                    <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Facebook.png"></a>
+                    <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Instagram.png"></a>
+                    <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Twitter.png"></a>
+                <li>Contact</li>
+            </ul>
+        </footer>
+    </body>
 </html>
