--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -13,15 +13,18 @@
 
 <body>
     <header>
-        <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
-        <h1>Tours Tech Valley</h1>
-        <nav>
-            <ul>
-                <li>Accueil</li>
-                <li>Ecosystème numérique</li>
-                <li>Dynamisme économique</li>
-                <li>Qualité de vie</li>
-                <li>Contact</li>
+        <img class="headerbackground" src="https://via.placeholder.com/480x80" alt="backgroundarticle">
+        <div class="desktop_title">
+            <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
+            <h1>Tours Tech Valley</h1>
+        </div>
+        <nav class="navbar">
+            <ul class="ulnavbar">
+                <li><a href="#accueil">ACCUEIL</a></li>
+                <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
+                <li><a href="#qualvie">QUALITE DE VIE</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -123,11 +126,14 @@
         </div>
     </section>
     <footer>
-        <ul class="contact2">
+        <ul class="contact">
             <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseau" src="images/Images reseaux sociaux/Twitter.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="images/Images reseaux sociaux/Facebook.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="images/Images reseaux sociaux/Instagram.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="images/Images reseaux sociaux/Twitter.png"></a>
             <li>Contact</li>
         </ul>
     </footer>
