--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
@@ -9,10 +10,11 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <title>Tours Tech Valley</title>
 </head>
+
 <body>
     <header>
-            <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
-            <h1>Tours Tech Valley</h1>
+        <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
+        <h1>Tours Tech Valley</h1>
         <nav>
             <ul>
                 <li>Accueil</li>
@@ -23,41 +25,31 @@
             </ul>
         </nav>
     </header>
-        <section class="category" ><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
-            </br>
-            </br>
-            </br>
+    <section class="bloc_article">
+        <article class="category2"><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
             <h2>Le numérique</h2>
-            </br>
-            </br>
-            </br>
-        </section>
-        <section class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
-            </br>
-            </br>
-            </br>
-            <h2>L'Economie</h2>
-            </br>
-            </br>
-            </br>
-        </section>
-        <section class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">    
-            </br>
-            </br>
-            </br>
-            <h2>La Vie a Tours</h2>
-            </br>
-            </br>
-            </br>
-        </section>
+        </article>
+        <div class="article_desktop">
+            <article class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
+                <h2>L'Economie</h2>
+            </article>
+            <article class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">
+                <h2>La Vie a Tours</h2>
+            </article>
+        </div>
+    </section>
     <footer>
         <ul class="contact">
             <li>Contact Us</li>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Facebook.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Instagram.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Twitter.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="Images/Images reseaux sociaux/Facebook.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="Images/Images reseaux sociaux/Instagram.png"></a>
+            <a href="https://www.votre_url.com"><img class="reseaux"
+                    src="Images/Images reseaux sociaux/Twitter.png"></a>
             <li>Contact</li>
         </ul>
     </footer>
 </body>
+
 </html>
