correction fautes, amelio header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <body>
     <header>
-        <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
-        <h1>Tours Tech Valley</h1>
+        <div class="desktop_title">
+            <img class="logo" src="Images/Image-acceuil/logo_1.png">
+            <h1>Tours Tech Valley</h1>
+        </div>
         <nav>
             <ul>
                 <li>Accueil</li>
@@ -31,10 +33,10 @@
         </article>
         <div class="article_desktop">
             <article class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
-                <h2>L'Economie</h2>
+                <h2>L'économie</h2>
             </article>
             <article class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">
-                <h2>La Vie a Tours</h2>
+                <h2>La vie à Tours</h2>
             </article>
         </div>
     </section>
