--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -13,13 +13,14 @@
 
 <body>
     <header>
-        <img class="headerbackground" src="https://via.placeholder.com/480x80" alt="backgroundarticle">
+        <img class="headerbackground" src="Images/banniere/mame-desktop.jpg" alt="backgroundarticle">
         <div class="desktop_title">
             <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
             <ul class="ulnavbar">
+                <li><img class="logo_desktop" src="Images/Image-acceuil/logo_1.png"></li>
                 <li><a href="#accueil">ACCUEIL</a></li>
                 <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
                 <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
