Alignement titre logo

--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -15,7 +15,7 @@
     <header>
         <img class="headerbackground" src="Images/banniere/mame-desktop.jpg" alt="backgroundarticle">
         <div class="desktop_title">
-            <div title="logo"><img class="logo" src="Images/Image-acceuil/logo_1.png"></div>
+            <img class="logo" src="Images/Image-acceuil/logo_1.png">
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
