footer complete, et contenu ecosysteme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     src="Images/Images reseaux sociaux/Instagram.png"></a>
             <a href="https://www.votre_url.com"><img class="reseaux"
                     src="Images/Images reseaux sociaux/Twitter.png"></a>
-            <li>Contact</li>
+            <li>Annuaire</li>
         </ul>
     </footer>
 </body>
