add burger menu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <img class="logo" src="Images/Image-acceuil/logo_1.png">
             <h1>Tours Tech Valley</h1>
         </div>
-        <nav>
-            <ul>
-                <li>Accueil</li>
-                <li>Ecosystème numérique</li>
-                <li>Dynamisme économique</li>
-                <li>Qualité de vie</li>
-                <li>Contact</li>
+        <nav class="navbar">
+            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
+            <ul class="nav__list">
+                <li><a href="#accueil">ACCUEIL</a></li>
+                <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
+                <li><a href="#qualvie">QUALITE DE VIE</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -52,6 +53,17 @@
             <li>Contact</li>
         </ul>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('.nav__burger').addEventListener('click', (e) => {
+                const $burger = e.currentTarget;
+                const $list = $burger.parentElement.querySelector('.nav__list');
+                $burger.classList.toggle('nav__burger--active');
+                $list.classList.toggle('nav__list--active');
+            });
+        })
+    </script>
 </body>
 
 </html>
