--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -19,17 +19,16 @@
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
-            <ul class="ulnavbar">
-                <li><img class="logo_desktop" src="Images/Image-acceuil/logo_1.png"></li>
-                <li><a href="#accueil">ACCUEIL</a></li>
-                <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
-                <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
-                <li><a href="#qualvie">QUALITE DE VIE</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
+            <ul class="nav__list">
+                    <li><a href="#accueil">ACCUEIL</a></li>
+                    <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                    <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
+                    <li><a href="#qualvie">QUALITE DE VIE</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-
     <section>
         <h2>Entreprise</h2>
         <div class="bloc_article">
@@ -138,6 +137,16 @@
             <li>Contact</li>
         </ul>
     </footer>
+    <script>
+            document.addEventListener('DOMContentLoaded', () => {
+        document.querySelector('.nav__burger').addEventListener('click', (e) => {
+            const $burger = e.currentTarget;
+            const $list = $burger.parentElement.querySelector('.nav__list');
+            $burger.classList.toggle('nav__burger--active');
+            $list.classList.toggle('nav__list--active');
+        });
+    })
+</script>
 </body>
 
 </html>
