ajout image et différente page de ecosysteme

--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section>
-        <h2>Entreprise</h2>
+        <h2>Les entreprise à Tours</h2>
         <div class="bloc_article">
             <article>
                 <img src="images/entreprise/capgemini.png">
@@ -61,7 +61,7 @@
         </div>
     </section>
     <section>
-        <h2>Structure</h2>
+        <h2>Les structure à Tours</h2>
         <div class="bloc_article">
             <article>
                 <img src="images/logo_ecosysteme/MAME.jpg">
