--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -21,8 +21,8 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
             <ul class="nav__list">
-                    <li><a href="#accueil">ACCUEIL</a></li>
-                    <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                    <li><a href="index.html">ACCUEIL</a></li>
+                    <li><a href="ecosysteme.html">ECOSYSTEME DU NUMERIQUE</a></li>
                     <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
                     <li><a href="#qualvie">QUALITE DE VIE</a></li>
                     <li><a href="#contact">CONTACT</a></li>
