--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
             <ul class="nav__list">
-                <li><a href="#accueil">ACCUEIL</a></li>
-                <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="ecosysteme.html">ECOSYSTEME DU NUMERIQUE</a></li>
                 <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
                 <li><a href="#qualvie">QUALITE DE VIE</a></li>
                 <li><a href="#contact">CONTACT</a></li>
@@ -30,7 +30,7 @@
     </header>
     <section class="bloc_article">
         <article class="category2"><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
-            <h2>Le numérique</h2>
+            <h2><a href="ecosysteme.html"> Le numérique</a></h2>
         </article>
         <div class="article_desktop">
             <article class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
@@ -44,7 +44,7 @@
     <footer>
         <ul class="contact">
             <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://www.votre_url.com"></a><img class="reseaux"
                     src="Images/Images reseaux sociaux/Facebook.png"></a>
             <a href="https://www.votre_url.com"><img class="reseaux"
                     src="Images/Images reseaux sociaux/Instagram.png"></a>
