modif banniere centré les images destock ajout liens reseaux

--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
         <h1 class="headertitle">Les Entreprises</h1>
         <article>
             <h2 class="name">Nom entreprise</h2>
-            <div class="dispo"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt veniam, voluptatum doloremque quibusdam voluptates officiis eligendi vitae officia sapiente doloribus quis? Dolorem, autem iste a inventore beatae repellat ullam. Nulla?</p>
+            <div class="dispo"><p></p>
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.136517543456!2d0.6867076156229934!3d47.3897691791708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fcd5b614bfac8b%3A0x7ddcd24268e8d8b7!2sPlace%20Jean%20Jaur%C3%A8s%2C%2037000%20Tours!5e0!3m2!1sfr!2sfr!4v1568714317697!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
             </article>
@@ -35,7 +35,7 @@
     <section>
         <article>
             <h2 class="name">Nom entreprise</h2>
-            <div class="dispo"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt veniam, voluptatum doloremque quibusdam voluptates officiis eligendi vitae officia sapiente doloribus quis? Dolorem, autem iste a inventore beatae repellat ullam. Nulla?</p>
+            <div class="dispo"><p></p>
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.136517543456!2d0.6867076156229934!3d47.3897691791708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fcd5b614bfac8b%3A0x7ddcd24268e8d8b7!2sPlace%20Jean%20Jaur%C3%A8s%2C%2037000%20Tours!5e0!3m2!1sfr!2sfr!4v1568714317697!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
             </article>
@@ -44,7 +44,7 @@
         <article>
             <h1 class="headertitle">Les Structures</h1>
             <h2 class="name">Nom entreprise</h2>
-            <div class="dispo"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt veniam, voluptatum doloremque quibusdam voluptates officiis eligendi vitae officia sapiente doloribus quis? Dolorem, autem iste a inventore beatae repellat ullam. Nulla?</p>
+            <div class="dispo"><p></p>
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.136517543456!2d0.6867076156229934!3d47.3897691791708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fcd5b614bfac8b%3A0x7ddcd24268e8d8b7!2sPlace%20Jean%20Jaur%C3%A8s%2C%2037000%20Tours!5e0!3m2!1sfr!2sfr!4v1568714317697!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
             </article>
@@ -64,9 +64,9 @@
     <footer>
         <ul class="contact">
             <li>Contact Us</li>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Facebook.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Instagram.png"></a>
-                <a href="https://www.votre_url.com" ><img class="reseaux" src="Images/Images reseaux sociaux/Twitter.png"></a>
+                <a href="https://www.facebook.com/mametours/" ><img class="reseaux" src="Images/Images reseaux sociaux/Facebook.png"></a>
+                <a href="https://www.instagram.com/mame.tours/?hl=fr" ><img class="reseaux" src="Images/Images reseaux sociaux/Instagram.png"></a>
+                <a href="https://twitter.com/mametours" ><img class="reseaux" src="Images/Images reseaux sociaux/Twitter.png"></a>
             <li>Annuaire</li>
         </ul>
     </footer>
