--- a/economie.html
+++ b/economie.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="ecosysteme3.css">
+    <link rel="stylesheet" href="economie.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <title>Tours Tech Valley</title>
 </head>
 
 <body>
     <header>
-        <img class="headerbackground" src="Images/banniere/mame-desktop.jpg" alt="backgroundarticle">
+        <img class="headerbackground" src="Images/banniere/La-vie.jpg" alt="backgroundarticle">
         <div class="desktop_title">
             <img class="logo" src="Images/Image-acceuil/logo_1.png">
             <h1>Tours Tech Valley</h1>
@@ -30,29 +30,29 @@
         </nav>
     </header>
     <section>
-        <h2>Qualité de vie</h2>
+        <h2>L'économie à Tours</h2>
         <div class="bloc_article">
             <article>
-                <img src="images/logo_ecosysteme3/la vie.jpg">
+                <img src="images/logo_ecosysteme2/emploi.jpg">
                 <div class="contenu_article">
-                    <h3>La vie à Tours</h3>
-                    <p>Nichée en plein cœur de la Vallée de la Loire, Tours sait allier vieilles pierres et high-tech, afin de passer aisément de châteaux mondialement connus aux entreprises du numérique les plus performantes.</p>
+                    <h3>L'emploi</h3>
+                    <p>Le chômage y est inférieur au niveau national, les activités restent diversifiées et positionnées sur des technologies stratégiques (digital, pharmaceutique, agroalimentaire), très ouvertes à l’international.</p>
                 </div>
             </article>
             <hr />
             <article class="inverse">
-                <img src="images/logo_ecosysteme3/tram.jpg">
+                <img src="images/logo_ecosysteme2/Touraine.jpg">
                 <div class="contenu_article">
-                    <h3>Transports</h3>
-                    <p>Au milieu d’un réseau autoroutier entre Paris, Bordeaux, Nantes et Bourges. À 1h00 en train de Paris et 2h00 de Nantes. Un réseau Tram+Bus desservant régulièrement la ville et son agglomération. Son aéroport et des vols réguliers vers Londres, Dublin, Marrakech, Porto et Marseille.</p>
+                    <h3>Le tourisme</h3>
+                    <p>L’Indre-et-Loire est le premier département touristique du Val de Loire, son appareil de formation et de recherche publique est performant, avec ses 27.000 étudiants, ses 2.500 chercheurs également présents à l’INRA et au CEA, ses écoles de commerce et d’ingénieurs, son Institut du médicament, son campus de start-up, une hausse de 5 % des entrées dans l’apprentissage</p>
                 </div>
             </article>
             <hr />
             <article>
-                <img src="images/logo_ecosysteme3/loisir.png">
+                <img src="images/logo_ecosysteme2/solary.png">
                 <div class="contenu_article">
-                    <h3>Loisirs</h3>
-                    <p>En territoire littéraire et gastronome, vous saurez apprécier un livre de Balzac tout en dégustant une tartine chaude fromage de chèvre de Sainte-Maure-De-Touraine accompagné de son verre de vin de Chinon. À proximité du vieux mûrier de la place Plumereau, sinon rien!</p>
+                    <h3>Des univers variés</h3>
+                    <p>La variété des entreprises tourangelle permet de laisser parler la matière, grise, électrique, numérique, naturelle ou brute de fonderie : Escape Yourself, Bertucelli, RDV Productions, Alienor France, Belorr, Solary TV Productions, Lestra, Le Kiosque Gourmand, Edgar Opticiens, SKF, Supra Technologies…</p>
                 </div>
             </article>
         </div>
@@ -60,11 +60,11 @@
     <footer>
         <ul class="contact">
             <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://www.facebook.com/mametours/"><img class="reseaux"
                     src="images/Images reseaux sociaux/Facebook.png"></a>
             <a href="https://www.votre_url.com"><img class="reseaux"
                     src="images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://twitter.com/mametours"><img class="reseaux"
                     src="images/Images reseaux sociaux/Twitter.png"></a>
             <li>Annuaire</li>
         </ul>
