--- a/numerique.html
+++ b/numerique.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="ecosysteme.css">
+    <link rel="stylesheet" href="numerique.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <title>Tours Tech Valley</title>
 </head>
@@ -93,11 +93,11 @@
     <footer>
         <ul class="contact">
             <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://www.facebook.com/mametours/"><img class="reseaux"
                     src="images/Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://www.instagram.com/mame.tours/?hl=fr"><img class="reseaux"
                     src="images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
+            <a href="https://twitter.com/mametours"><img class="reseaux"
                     src="images/Images reseaux sociaux/Twitter.png"></a>
             <li>Annuaire</li>
         </ul>
