add navbar index

--- a/ecosysteme.html
+++ b/ecosysteme.html
@@ -94,11 +94,11 @@
         <ul class="contact">
             <li>Contact Us</li>
             <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Facebook.png"></a>
+                    src="images/Images_reseaux_sociaux/Facebook.png"></a>
             <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Instagram.png"></a>
+                    src="images/Images_reseaux_sociaux/Instagram.png"></a>
             <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Twitter.png"></a>
+                    src="images/Images_reseaux_sociaux/Twitter.png"></a>
             <li>Annuaire</li>
         </ul>
     </footer>
